--- Added text for empty completed questionnaires

--- a/templates/questionnaire-completed.html
+++ b/templates/questionnaire-completed.html
@@ -1,37 +1,33 @@
 <div id="main">
-    <div id="top">
-        <div class="clearfix">
+	<div id="top">
+		<div class="clearfix">
 
-            <div class="row">
-                <div class="col-md-2">
-                    <div ng-include="'templates/questionnaire-side-menu.html'"></div>
-                </div>
+			<div class="row">
+				<div class="col-md-2">
+					<div ng-include="'templates/questionnaire-side-menu.html'"></div>
+				</div>
 
-                <div class="col-md-10 animated fadeIn">
-                    <div class="row main-title">
-                        <div class="col-md-6 title-content">
-                            <span class="fa fa-check"></span>
-                            <h1><strong>View Completed Questionnaire</strong></h1>
-                        </div>
+				<div class="col-md-10 animated fadeIn">
+					<div class="row main-title">
+						<div class="col-md-6 title-content">
+							<span class="fa fa-check"></span>
+							<h1><strong>View Completed Questionnaire</strong></h1>
+						</div>
 
-                        <div class="col-md-6 title-breadcrumbs">
-			            	<span>
-								<a href="#/">Home</a> <span class="glyphicon glyphicon-menu-right teflon"></span> <a href="#/questionnaire">Questionnaire</a> <span class="glyphicon glyphicon-menu-right teflon"></span> <strong>View Completed Questionnaire</strong></span>
-                        </div>
-                    </div>
+						<div class="col-md-6 title-breadcrumbs">
+							<span>
+								<a href="#/">Home</a> <span class="glyphicon glyphicon-menu-right teflon"></span> <a href="#/questionnaire">Questionnaire</a>	<span class="glyphicon glyphicon-menu-right teflon"></span> <strong>View Completed Questionnaire</strong></span>
+						</div>
+					</div>
 
-                    <!-- Back button
-                    <div class="row clearfix" style="margin-bottom: 10px; display:flex; align-items: center">
-                        <div class="col-md-8">
-                            <a style="width:100px;margin-right:20px;" href="" ng-click="goToQuestionnaire()" class="btn btn-md btn-outline item-button">
-                                <span style="font-size: 17px;" class="fa fa-arrow-left"></span>
-                                <span style="font-size: 20px;"><strong>Back</strong></span>
-                            </a>
-                        </div>
-                    </div>-->
-                </div>
+					<div class="jumbotron" style="background-color: transparent;">
+						<h1><span class="fa fa-pencil-square-o"></span></h1>
+						<p>There are no completed questionnaires</p>
+					</div>
 
-            </div>
-        </div>
-    </div>
+				</div>
+
+			</div>
+		</div>
+	</div>
 </div>
