--- a/templates/add-alias.html
+++ b/templates/add-alias.html
@@ -14,6 +14,19 @@
               </div>   
             </div>
             <div class="summary-fix">
+							<div class="row side-panel-menu">
+								<div class="col-md-12">
+									<div class="panel-container animated" ng-class="{pulse: hoverBack}" ng-mouseenter="hoverBack=true" ng-mouseleave="hoverBack=false" style="cursor:pointer;" ng-click="goBack()">
+										<div class="side-panel-info-sm">
+											<div class="panel-content">
+												<span style="font-size: 23px;vertical-align:middle" class="fa fa-arrow-left" aria-hidden="true"></span>
+												<h6 class="side-panel-title" style="display:inline-block;margin:0"><strong>Back to Tasks / Appts / Documents</strong></h6>
+											</div>
+										</div>
+									</div>
+								</div>
+							</div>
+			
               <div class="row">
                 <div class="side-menu-title">
                   <div class="horz-line" style="height: 10px; text-align: center">
@@ -184,14 +197,6 @@
                 <a href="" ng-click="submitAlias()" class="btn btn-md item-button-success animated" ng-class="{pulse: hoverV}" ng-mouseenter="hoverV=true" ng-mouseleave="hoverV=false" ng-if="checkForm()" style="width: 100%;">
                   <span style="font-size: 20px;"><strong>Submit {{newAlias.type.name}}</strong></span>
                 </a>
-              </div>
-              <div class="panel-container animated" ng-class="{pulse: hoverA}" ng-mouseenter="hoverA=true" ng-mouseleave="hoverA=false" style="cursor:pointer;" ng-click="goBack()">
-                <div class="side-panel-info">
-                  <div class="panel-content" style="text-align:center;">
-                    <span style="font-size: 23px; padding-right:10px;" class="glyphicon glyphicon-arrow-left" aria-hidden="true"></span>
-                    <span style="font-size: 30px; font-weight:700">Go Back</span>
-                  </div>
-                </div>
               </div>
             </div>
           </div>
