--- a/templates/questionnaire-completed.html
+++ b/templates/questionnaire-completed.html
@@ -20,9 +20,11 @@
 						</div>
 					</div>
 
-					<div class="jumbotron" style="background-color: transparent;">
-						<h1><span class="fa fa-pencil-square-o"></span></h1>
-						<p>There are no completed questionnaires</p>
+					<div class="none-to-display-container">
+						<div class="jumbotron content col-md-12" style="background-color: transparent;">
+							<h1 class="icon"><span class="fa fa-pencil-square-o"></span></h1>
+							<p>There are no completed questionnaires</p>
+						</div>
 					</div>
 
 				</div>
