--- a/templates/questionnaire-manage.html
+++ b/templates/questionnaire-manage.html
@@ -338,6 +338,200 @@
 					</ul>
 				</div>
 			</div>
+
+			<div uib-accordion-group is-open="statusI.open"> 
+				<uib-accordion-heading>
+					<div>
+						Filter Demographics <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': statusI.open, 'glyphicon-chevron-right': !statusI.open}"></i>
+					</div>
+				</uib-accordion-heading>
+				<div class="bs-callout bs-callout-info">
+					<h4>Current Sex Filter: <span ng-hide="demoFilter.sex">None</span><span ng-show="demoFilter.sex">{{demoFilter.sex}}</span> </h4>
+					<h4>Current Age Group Filter: <span ng-hide="demoFilter.age">None</span><span ng-show="demoFilter.age">{{demoFilter.age.min}} to {{demoFilter.age.max}}</span> </h4>
+					<p>To change the current filter(s), use the fields below.</p>
+				</div>
+				<div class="row">
+					<div class="col-md-6">
+						<h2 style="margin:0 0 7px 0; padding: 0 15px; font-size:30px;">Sex</h2>
+						<ul class="list-items">
+							<li ng-repeat="sex in sexes">
+								<label>
+									<input type="radio" ng-model="demoFilter.sex" ng-change="setChangesMade()" ng-value="sex.name" /> {{sex.name}}
+								</label>
+							</li>
+						</ul>
+						<div style="padding: 10px;">
+							<button class="btn btn-primary" ng-click="demoFilter.sex=''">Remove Filter</button>
+						</div>
+					</div>
+					<div class="col-md-6">
+						<h2 style="margin:0 0 7px 0; padding: 0 15px; font-size:30px;">Age Group</h2>
+						<div class="row">
+							<div class="col-md-6">
+								<div class="input-group">
+									<span class="input-group-addon">MIN</span>
+									<input class="form-control" ng-model="demoFilter.age.min" ng-change="setChangesMade()" type="number" ng-max="demoFilter.age.max" min="0">
+								</div> 
+							</div>
+							<div class="col-md-6">
+								<div class="input-group">
+									<span class="input-group-addon">MAX</span>
+									<input class="form-control" ng-model="demoFilter.age.max" ng-change="setChangesMade()" type="number" max="100" ng-min="demoFilter.age.min">
+								</div> 
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>     
+			<div uib-accordion-group is-open="statusFilterTerms.open">
+				<uib-accordion-heading>
+					<div>
+						Filter Terms <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': statusFilterTerms.open, 'glyphicon-chevron-right': !statusFilterTerms.open}"></i>
+					</div>
+				</uib-accordion-heading>
+				<div class="bs-callout bs-callout-info">
+					<h4>Current Terms</h4>
+					<ul class="list-items-4col">
+						<li ng-show="allFilters(termList)">
+							All Terms
+						</li>  
+						<li ng-repeat="selectedTerm in termList | filter: {added: 1} : 1" ng-hide="allFilters(termList)">
+							{{selectedTerm.name}}
+						</li>
+					</ul>
+					<p>To add/remove term filter, use the list below.</p>
+				</div>
+				<div class="list-space">
+					<div class="input-group">
+						<span class="input-group-addon"><span class="glyphicon glyphicon-search"></span></span>
+						<input class="form-control" type="text" ng-model="termSearchField" ng-change="searchTerm(termSearchField)" placeholder="Search..."/>
+					</div>
+					<div style="padding: 10px;">
+						<label> 
+							<input type="checkbox" ng-click="selectAllTerms()"> Select All
+						</label>
+					</div>    
+					<ul class="list-items">
+						<li ng-repeat="term in termList | filter: searchTermsFilter">
+							<label>
+								<input type="checkbox" ng-click="selectItem(term)" ng-checked="term.added" /> {{term.name}}
+							</label>
+						</li>
+					</ul>
+				</div>
+			</div>
+			<div uib-accordion-group is-open="statusFilterDiagnosis.open">
+				<uib-accordion-heading>
+					<div>
+						Filter Diagnoses <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': statusFilterDiagnosis.open, 'glyphicon-chevron-right': !statusFilterDiagnosis.open}"></i>
+					</div>
+				</uib-accordion-heading>
+				<div class="bs-callout bs-callout-info">
+					<h4>Current Diagnosis Filters</h4>
+					<ul class="list-items-4col">
+						<li ng-show="allFilters(dxFilterList)">
+							All Diagnoses
+						</li>  
+						<li ng-repeat="dx in dxFilterList | filter: {added: 1} : 1" ng-hide="allFilters(dxFilterList)">
+							{{dx.name}}
+						</li>
+					</ul>
+					<p>To add/remove diagnosis filter, use the list below.</p>
+				</div>
+				<div class="list-space">
+					<div class="input-group">
+						<span class="input-group-addon"><span class="glyphicon glyphicon-search"></span></span>
+						<input class="form-control" type="text" ng-model="dxSearchField" ng-change="searchDiagnosis(dxSearchField)" placeholder="Search..."/>
+					</div>
+					<div style="padding: 10px;">
+						<strong> 
+							To select all, leave all boxes unchecked.
+						</strong>
+					</div>    
+					<ul class="list-items">
+						<li ng-repeat="dx in dxFilterList | filter: searchDxFilter">
+							<label>
+								<input type="checkbox" ng-click="selectItem(dx)" ng-checked="dx.added" /> {{dx.name}}
+							</label>
+						</li>
+					</ul>
+				</div>
+			</div>
+			<div uib-accordion-group is-open="statusFilterDoctor.open">
+				<uib-accordion-heading>
+					<div>
+						Filter Doctors <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': statusFilterDoctor.open, 'glyphicon-chevron-right': !statusFilterDoctor.open}"></i>
+					</div>
+				</uib-accordion-heading>
+				<div class="bs-callout bs-callout-info">
+					<h4>Current Doctor Filters</h4>
+					<ul class="list-items-4col">
+						<li ng-show="allFilters(doctorFilterList)">
+							All Doctors
+						</li>  
+						<li ng-repeat="doctor in doctorFilterList | filter: {added: 1} : 1" ng-hide="allFilters(doctorFilterList)">
+							{{doctor.name}}
+						</li>
+					</ul>
+					<p>To add/remove doctors, use the list below.</p>
+				</div>
+				<div class="list-space">
+					<div class="input-group">
+						<span class="input-group-addon"><span class="glyphicon glyphicon-search"></span></span>
+						<input class="form-control" type="text" ng-model="doctorSearchField" ng-change="searchDoctor(doctorSearchField)" placeholder="Search..."/>
+					</div>
+					<div style="padding: 10px;">
+						<strong> 
+							To select all, leave all boxes unchecked.
+						</strong>
+					</div>    
+					<ul class="list-items">
+						<li ng-repeat="doctor in doctorFilterList | filter: searchDoctorFilter">
+							<label>
+								<input type="checkbox" ng-click="selectItem(doctor)" ng-checked="doctor.added" /> {{doctor.name}}
+							</label>
+						</li>
+					</ul>
+				</div>
+			</div>
+			<div uib-accordion-group is-open="statusFilterResource.open">
+				<uib-accordion-heading>
+					<div>
+						Filter Resources <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': statusFilterResource.open, 'glyphicon-chevron-right': !statusFilterResource.open}"></i>
+					</div>
+				</uib-accordion-heading>
+				<div class="bs-callout bs-callout-info">
+					<h4>Current Resource Filters</h4>
+					<ul class="list-items-4col">
+						<li ng-show="allFilters(resourceFilterList)">
+							All Resources
+						</li>  
+						<li ng-repeat="resource in resourceFilterList | filter: {added: 1} : 1" ng-hide="allFilters(resourceFilterList)">
+							{{resource.name}}
+						</li>
+					</ul>
+					<p>To add/remove resources, use the list below.</p>
+				</div>
+				<div class="list-space">
+					<div class="input-group">
+						<span class="input-group-addon"><span class="glyphicon glyphicon-search"></span></span>
+						<input class="form-control" type="text" ng-model="resourceSearchField" ng-change="searchResource(resourceSearchField)" placeholder="Search..."/>
+					</div>
+					<div style="padding: 10px;">
+						<strong> 
+							To select all, leave all boxes unchecked.
+						</strong>
+					</div>    
+					<ul class="list-items">
+						<li ng-repeat="resource in resourceFilterList | filter: searchResourceFilter">
+							<label>
+								<input type="checkbox" ng-click="selectItem(resource)" ng-checked="resource.added" /> {{resource.name}}
+							</label>
+						</li>
+					</ul>
+				</div>
+			</div>
+
 		</uib-accordion>
 	</div>
 </script>
