--- bold the accordion titles

--- a/templates/questionnaire-manage.html
+++ b/templates/questionnaire-manage.html
@@ -342,7 +342,7 @@
 			<div uib-accordion-group is-open="statusI.open"> 
 				<uib-accordion-heading>
 					<div>
-						Filter Demographics <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': statusI.open, 'glyphicon-chevron-right': !statusI.open}"></i>
+						<strong>Filter Demographics </strong><i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': statusI.open, 'glyphicon-chevron-right': !statusI.open}"></i>
 					</div>
 				</uib-accordion-heading>
 				<div class="bs-callout bs-callout-info">
@@ -386,7 +386,7 @@
 			<div uib-accordion-group is-open="statusFilterTerms.open">
 				<uib-accordion-heading>
 					<div>
-						Filter Terms <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': statusFilterTerms.open, 'glyphicon-chevron-right': !statusFilterTerms.open}"></i>
+						<strong>Filter Terms </strong><i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': statusFilterTerms.open, 'glyphicon-chevron-right': !statusFilterTerms.open}"></i>
 					</div>
 				</uib-accordion-heading>
 				<div class="bs-callout bs-callout-info">
@@ -423,7 +423,7 @@
 			<div uib-accordion-group is-open="statusFilterDiagnosis.open">
 				<uib-accordion-heading>
 					<div>
-						Filter Diagnoses <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': statusFilterDiagnosis.open, 'glyphicon-chevron-right': !statusFilterDiagnosis.open}"></i>
+						<strong>Filter Diagnoses </strong><i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': statusFilterDiagnosis.open, 'glyphicon-chevron-right': !statusFilterDiagnosis.open}"></i>
 					</div>
 				</uib-accordion-heading>
 				<div class="bs-callout bs-callout-info">
@@ -460,7 +460,7 @@
 			<div uib-accordion-group is-open="statusFilterDoctor.open">
 				<uib-accordion-heading>
 					<div>
-						Filter Doctors <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': statusFilterDoctor.open, 'glyphicon-chevron-right': !statusFilterDoctor.open}"></i>
+						<strong>Filter Doctors </strong><i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': statusFilterDoctor.open, 'glyphicon-chevron-right': !statusFilterDoctor.open}"></i>
 					</div>
 				</uib-accordion-heading>
 				<div class="bs-callout bs-callout-info">
@@ -497,7 +497,7 @@
 			<div uib-accordion-group is-open="statusFilterResource.open">
 				<uib-accordion-heading>
 					<div>
-						Filter Resources <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': statusFilterResource.open, 'glyphicon-chevron-right': !statusFilterResource.open}"></i>
+						<strong>Filter Resources </stron><i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': statusFilterResource.open, 'glyphicon-chevron-right': !statusFilterResource.open}"></i>
 					</div>
 				</uib-accordion-heading>
 				<div class="bs-callout bs-callout-info">
