--- a/templates/questionnaire-add.html
+++ b/templates/questionnaire-add.html
@@ -596,7 +596,263 @@
                     </div>
                   </form>
                 </div>
+			  </div>
+			
+			  <div class="row animated" ng-class="{fadeInUp:demo.show}" ng-if="demo.show">
+              <div class="col-md-12 side-menu-title">
+                <div style="height: 10px; border-bottom: 2px solid rgba(111, 84, 153, 0.8);">
+                  <span style="background-color:#e6edfa; padding: 0 10px;">
+                    <span class="fa fa-dot-circle-o"></span>
+                    <h2>Demographic Filters</h2>
+                  </span>  
+                </div>  
               </div>
+            </div>   
+            <div class="row animated" ng-class="{fadeInUp:demo.show}" ng-if="demo.show">
+              <div class="col-md-12">
+                <p style="margin-bottom: 10px;">
+                  <span><strong>Optional field:</strong></span>
+                  Please assign a demographic filter. Leave unmarked for no filter.
+                </p>
+              </div>
+            </div>  
+            <div class="row animated" ng-class="{fadeInUp:demo.show}" ng-if="demo.show">
+              <div class="col-md-6">
+                <h2 style="margin:0 0 7px 0; padding: 0 15px; font-size:30px;">Sex</h2>
+              </div>  
+              <div class="row">
+                <h2 style="margin:0 0 7px 0; padding: 0 15px; font-size:30px;">Age Group</h2>
+              </div>
+            </div>
+            <div class="row animated" ng-class="{fadeInUp:demo.show}" ng-if="demo.show">
+              <div ng-repeat="sex in sexes" class="col-md-2">
+                <div class="panel-container animated" style="cursor:pointer;" ng-class="{pulse: hover, active: demoFilter.sex == sex.name}" ng-click="sexUpdate(sex)" ng-mouseenter="hover=true" ng-mouseleave="hover=false">
+                  <div class="panel-info" ng-class="{active: demoFilter.sex == sex.name}">
+                    <div class="panel-content" style="text-align:center">
+                      <span style="font-size:30px;" class="fa fa-{{sex.icon}}"></span>
+                      <div class="option-panel-title">{{sex.name}}</div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-1"></div>
+              <div class="col-md-3">
+                <div class="panel">
+                  <div class="panel-body">
+                    <div class="row">
+                      <div class="col-md-2">
+                        <div style="font-size:16px; text-align:right;">MIN</div>
+                      </div>
+                      <div class="col-md-10">
+                        <div class="form-group" style="margin-bottom:0px;">
+                          <input class="form-control" ng-model="demoFilter.age.min" type="number" ng-change="ageUpdate()" ng-max="demoFilter.age.max" min="0">
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>          
+              <div class="col-md-3">
+                <div class="panel">
+                  <div class="panel-body">
+                    <div class="row">
+                      <div class="col-md-2">
+                        <div style="font-size:16px; text-align:right;">MAX</div>
+                      </div>
+                      <div class="col-md-10">
+                        <div class="form-group" style="margin-bottom:0px;">
+                          <input class="form-control" ng-model="demoFilter.age.max" type="number" ng-change="ageUpdate()" max="100" ng-min="demoFilter.age.min">
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>        
+            </div>  
+
+            <div class="row animated" ng-class="{fadeInUp:terms.show}" ng-if="terms.show">
+              <div class="col-md-12 side-menu-title">
+                <div style="height: 10px; border-bottom: 2px solid rgba(111, 84, 153, 0.8);">
+                  <span style="background-color:#e6edfa; padding: 0 10px;">
+                    <span class="fa fa-dot-circle-o"></span>
+                    <h2>Expression Filters</h2>
+                  </span>  
+                </div>  
+              </div>
+            </div>   
+            <div class="row animated" ng-class="{fadeInUp:terms.show}" ng-if="terms.show">
+              <div class="col-md-12">
+                <p style="margin-bottom: 10px;">
+                  <span><strong>Optional field:</strong></span>
+                  Select one of more expression filters below. This will target patients with these specific filters. Leave blank for no filters.
+                </p>
+              </div>
+            </div>  
+            <div class="row animated" ng-class="{fadeInUp:terms.show}" ng-if="terms.show">
+              <div class="col-md-8">
+                <div class="panel-container">
+                  <div class="panel-info">
+                    <div class="panel-content">
+                      <div class="panel-input">  
+                        <div class="list-space">
+                          <div class="input-group">
+                            <span class="input-group-addon"><span class="glyphicon glyphicon-search"></span></span>
+                            <input class="form-control" type="text" ng-model="termSearchField" ng-change="searchTerm(termSearchField)" placeholder="Search Terms"/>
+                          </div>
+                          <div style="padding: 10px;">
+                            <label>
+                              <input type="checkbox" ng-click="selectAllTerms()"> Select All
+                            </label>
+                          </div>
+                          <ul class="list-items">
+                            <li ng-repeat="term in termList | filter: searchTermsFilter">
+                              <label>
+                                <input type="checkbox" ng-click="selectItem(term)" ng-checked="term.added" /> {{term.name}}
+                              </label>
+                            </li>
+                          </ul>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class="row animated" ng-class="{fadeInUp:terms.show}" ng-if="terms.show">
+              <div class="col-md-12 side-menu-title">
+                <div style="height: 10px; border-bottom: 2px solid rgba(111, 84, 153, 0.8);">
+                  <span style="background-color:#e6edfa; padding: 0 10px;">
+                    <span class="fa fa-dot-circle-o"></span>
+                    <h2>Diagnosis Filters</h2>
+                  </span>  
+                </div>  
+              </div>
+            </div>   
+            <div class="row animated" ng-class="{fadeInUp:terms.show}" ng-if="terms.show">
+              <div class="col-md-12">
+                <p style="margin-bottom: 10px;">
+                  <span><strong>Optional field:</strong></span>
+                  Select one of more diagnosis filters below. This will target patients with these specific diagnoses. Leave blank for no filters.
+                </p>
+              </div>
+            </div>  
+            <div class="row animated" ng-class="{fadeInUp:terms.show}" ng-if="terms.show">
+              <div class="col-md-8">
+                <div class="panel-container">
+                  <div class="panel-info">
+                    <div class="panel-content">
+                      <div class="panel-input">  
+                        <div class="list-space">
+                          <div class="input-group">
+                            <span class="input-group-addon"><span class="glyphicon glyphicon-search"></span></span>
+                            <input class="form-control" type="text" ng-model="dxSearchField" ng-change="searchDiagnosis(dxSearchField)" placeholder="Search Diagnosis"/>
+                          </div>
+                          <ul class="list-items">
+                            <li ng-repeat="Filter in dxFilterList | filter: searchDxFilter">
+                              <label>
+                                <input type="checkbox" ng-click="selectItem(Filter)" ng-checked="Filter.added" /> {{Filter.name}}
+                              </label>
+                            </li>
+                          </ul>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+
+            <div class="row animated" ng-class="{fadeInUp:terms.show}" ng-if="terms.show">
+              <div class="col-md-12 side-menu-title">
+                <div style="height: 10px; border-bottom: 2px solid rgba(111, 84, 153, 0.8);">
+                  <span style="background-color:#e6edfa; padding: 0 10px;">
+                    <span class="fa fa-dot-circle-o"></span>
+                    <h2>Doctor Filters</h2>
+                  </span>  
+                </div>  
+              </div>
+            </div>   
+            <div class="row animated" ng-class="{fadeInUp:terms.show}" ng-if="terms.show">
+              <div class="col-md-12">
+                <p style="margin-bottom: 10px;">
+                  <span><strong>Optional field:</strong></span>
+                  Select one of more doctor filters below. This will target patients with these specific doctors. Leave blank for no filters.
+                </p>
+              </div>
+            </div>  
+            <div class="row animated" ng-class="{fadeInUp:terms.show}" ng-if="terms.show">
+              <div class="col-md-8">
+                <div class="panel-container">
+                  <div class="panel-info">
+                    <div class="panel-content">
+                      <div class="panel-input">  
+                        <div class="list-space">
+                          <div class="input-group">
+                            <span class="input-group-addon"><span class="glyphicon glyphicon-search"></span></span>
+                            <input class="form-control" type="text" ng-model="doctorSearchField" ng-change="searchDoctor(doctorSearchField)" placeholder="Search Doctor"/>
+                          </div>
+                          <ul class="list-items">
+                            <li ng-repeat="Filter in doctorFilterList | filter: searchDoctorFilter">
+                              <label>
+                                <input type="checkbox" ng-click="selectItem(Filter)" ng-checked="Filter.added" /> {{Filter.name}}
+                              </label>
+                            </li>
+                          </ul>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+
+            <div class="row animated" ng-class="{fadeInUp:terms.show}" ng-if="terms.show">
+              <div class="col-md-12 side-menu-title">
+                <div style="height: 10px; border-bottom: 2px solid rgba(111, 84, 153, 0.8);">
+                  <span style="background-color:#e6edfa; padding: 0 10px;">
+                    <span class="fa fa-dot-circle-o"></span>
+                    <h2>Resource Filters</h2>
+                  </span>  
+                </div>  
+              </div>
+            </div>   
+            <div class="row animated" ng-class="{fadeInUp:terms.show}" ng-if="terms.show">
+              <div class="col-md-12">
+                <p style="margin-bottom: 10px;">
+                  <span><strong>Optional field:</strong></span>
+                  Select one of more resource filters below. This will target patients with these specific resources. Leave blank for no filters.
+                </p>
+              </div>
+            </div>  
+            <div class="row animated" ng-class="{fadeInUp:terms.show}" ng-if="terms.show">
+              <div class="col-md-8">
+                <div class="panel-container">
+                  <div class="panel-info">
+                    <div class="panel-content">
+                      <div class="panel-input">  
+                        <div class="list-space">
+                          <div class="input-group">
+                            <span class="input-group-addon"><span class="glyphicon glyphicon-search"></span></span>
+                            <input class="form-control" type="text" ng-model="resourceSearchField" ng-change="searchResource(resourceSearchField)" placeholder="Search Resource"/>
+                          </div>
+                          <ul class="list-items">
+                            <li ng-repeat="Filter in resourceFilterList | filter: searchResourceFilter">
+                              <label>
+                                <input type="checkbox" ng-click="selectItem(Filter)" ng-checked="Filter.added" /> {{Filter.name}}
+                              </label>
+                            </li>
+                          </ul>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+
 
             </div>
           </div>
