--- a/templates/questionnaire-add.html
+++ b/templates/questionnaire-add.html
@@ -858,4 +858,15 @@
           </div>
         </div>
       </div>
+	</div>
+	
+<script type="text/ng-template" id="processingModal.htm">
+  <div class="modal-header">
+    <h1> Processing...</h1>
+  </div>
+  <div class="modal-body">
+    <div class="progress progress-striped active">
+      <div class="progress-bar" style="width: 100%"></div>        
     </div>
+  </div>
+</script>
