--- Delete modal had "Post" and not "Questionnaire"

--- a/templates/questionnaire-manage.html
+++ b/templates/questionnaire-manage.html
@@ -55,7 +55,7 @@
 	</div>
 	<div class="modal-body">
 		<div class="bs-callout bs-callout-danger">
-			<h4>Post Delete</h4>
+			<h4>Questionnaire Delete</h4>
 			<p class="deleteText">Are you sure you want to delete the questionnaire "{{questionnaireToDelete.name_EN}}" ?</p>
 			<form method="post" ng-submit="deleteQuestionnaire()">
 				<input class="btn btn-primary" type="submit" value="Delete">
